--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "multer": "^2.0.2",
+    "pdf-lib": "^1.17.1",
     "sqlite3": "^5.1.7"
   }
 }
